# TimeEd

./: .env.example  .gitignore  .pre-commit-config.yaml  CONTRIBUTIONS.md  LICENSE.md  README.md  pyproject.toml  requirements.txt
.githooks/: validate_commit_msg.py
app/: __init__.py  config.py  db.py  forms.py  logging.py  messages.py  models.py  utils.py
app/db/: __init__.py  commands.py  models.py
app/db/schema/: __init__.py  enums.py  models.py
app/routes/: __init__.py
app/routes/auth/: __init__.py
app/routes/auth/static/css/: style.css
app/routes/auth/static/js/: tabs.js
app/routes/auth/templates/: login.html  register.html
app/routes/teacher/: __init__.py
app/routes/teacher/groups/: __init__.py
app/routes/teacher/sessions/: __init__.py
app/static/css/: base.css  landing_page.css
app/static/js/: menu.js
app/templates/: base.html  landing_page.html
app/templates/components/: footer.html  nav.html
app/web/assets/css/: base.css  components.css  layout.css  main.css  responsive.css  typography.css  variables.css
app/web/assets/css/components/: base.css  sections.css  typography.css  ui-components.css  variables.css
app/web/assets/css/routes/: index.css
app/web/assets/js/: base.js  pass_toggle.js  register.js  send_email.js  update_topbar.js
app/web/templates/: base.html  index.html
app/web/templates/components/: footer.html
app/web/templates/routes/auth/: auth_base.html  login.html  register.html
app/web/templates/routes/teacher/: teacher_base.html  view_all.html
tests/: conftest.py  test_db_commands.py  test_routes.py
(+4 files in other folders)
